[package]
name = "astral_cord"
version = "0.1.0"
authors = ["Aleksander Gondek"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
futures = "0.3"
futures-util = "0.3.5"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "1.8", features = ["full"] }
tungstenite = "0.10.1"
tokio-tungstenite = "0.10.1"

