workspace(
  name = "rise_and_fall_of_dwarven_empire_astral_cord",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
  name = "io_tweag_rules_nixpkgs",
  strip_prefix = "rules_nixpkgs-8e0e3848cf9a4125b3628f8d09dafc00a84f5358",
  urls = [
    "https://github.com/tweag/rules_nixpkgs/archive/8e0e3848cf9a4125b3628f8d09dafc00a84f5358.tar.gz"
  ],
)

load(
  "@io_tweag_rules_nixpkgs//nixpkgs:repositories.bzl",
  "rules_nixpkgs_dependencies"
)
rules_nixpkgs_dependencies()

load(
  "@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl",
  "nixpkgs_git_repository",
  "nixpkgs_package",
)

nixpkgs_git_repository(
  name = "nixpkgs",
  revision = "20.03",
)

nixpkgs_package(
  name = "astral_cord_bin",
  nix_file = "//:astral_cord_bin.nix",
  nix_file_deps = [
    "//:Cargo.lock",
    "//:Cargo.toml",
    "//:src/main.rs"
  ],
  repositories = { 
    "nixpkgs": "@nixpkgs//:default.nix"
  },
  build_file_content= """exports_files(["astral_cord"])"""
)
