package(default_visibility=["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

load("@npm_bazel_typescript//:index.bzl", "ts_library")

exports_files(["tsconfig.json"], visibility = ["//visibility:public"])

nodejs_binary(
    name = "hello2",
    data = [],
    entry_point = ":hello2.js",
)
 
ts_library(
    name = "hello3",
    srcs = glob(["hello.ts"]),
    deps = [],
)
