[package]
name = "rtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.1", default-features = false, features = [ "toml" ] }
serde = { version = "1.0.137", default-features = false }
serde_derive = { version = "1.0.137", default-features = false }
toml = { version = "0.5.9" }
